# ObsAutoSceneSwitcher

./: Cargo.toml  LICENSE
src/: ffi.rs  implementation.rs  lib.rs
