[package]
name = "ley_obs_scene_switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[lib]
name = "ley_obs_scene_switcher"
crate-type = ["cdylib"]
